Infra-setup/wordpress/security_group.tf
resource "aws_security_group" "management" {
  vpc_id      = data.aws_ssm_parameter.vpcid.value
  name        = "${lower(var.project_name)}-${lower(var.env)}-sg"
  description = "security group for server"

  egress {
    description = "Allow all egress."
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "${lower(var.project_name)}-${lower(var.env)}-sg"
  }
}
